WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50324
Fix clang warnings caused by -Wlogical-op-parentheses
https://bugs.webkit.org/show_bug.cgi?id=50324
Summary
Fix clang warnings caused by -Wlogical-op-parentheses
Nico Weber
Reported
2010-12-01 08:54:33 PST
Fix clang warnings caused by -Wlogical-op-parentheses
Attachments
Patch
(3.17 KB, patch)
2010-12-01 08:55 PST
,
Nico Weber
dglazkov
: review+
thakis
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2010-12-01 08:55:26 PST
Created
attachment 75277
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-12-01 09:15:47 PST
Comment on
attachment 75277
[details]
Patch This clang thing is just a fad. It'll never catch on.
Nico Weber
Comment 3
2010-12-01 09:49:39 PST
Comment on
attachment 75277
[details]
Patch
r73032
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug