2010-12-01  Nico Weber  <thakis@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix clang warnings caused by -Wlogical-op-parentheses
        https://bugs.webkit.org/show_bug.cgi?id=50324

        * platform/graphics/mac/ComplexTextController.cpp:
        (WebCore::ComplexTextController::adjustGlyphsAndAdvances):

Canonical link: https://commits.webkit.org/63482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73032 268f45cc-cd09-0410-ab3c-d52691b4dbfc